# gtk-filepublisher

./: AUTHORS  MAINTAINERS  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  main.vala
