NULL = 

AM_CPPFLAGS = \
	$(GTK_FILEPUBLISHER_CFLAGS) \
	-include $(CONFIG_HEADER) \
	$(NULL)

bin_PROGRAMS = gtk_filepublisher

gtk_filepublisher_SOURCES = \
	main.vala \
	$(NULL)

gtk_filepublisher_VALAFLAGS = --pkg gtk+-2.0

gtk_filepublisher_LDADD = \
	$(GTK_FILEPUBLISHER_LIBS) \
	$(NULL)

EXTRA_DIST = \
	$(NULL)

DISTCLEANFILES = \
	$(NULL)

